# meltano-json-bug

./: README.md  add_data.sql  docker-compose.yml  pyproject.toml
local-meltano/: Dockerfile  meltano.yml  requirements.txt
